# remiander_app

./: AppDbContext.cs  Cargo.toml  DTOs.cs  Entities.cs  Enums.cs  Interfaces.cs  Login.js  OpenAiService.cs  Program.cs  README.md  RemindAI.API.csproj  ReminderCheckerHostedService.cs  ReminderService.cs  TelegramService.cs  ai_assistant.rs  database.rs  main.rs  model.rs  reminder_service.rs  telegram_bot.rs
backend/: .env.example  README.md  database.sql  package-lock.json  package.json
backend/public/: app.js  chatbot.html  index.html  styles.css
backend/src/: auth.js  db.js  googleCalendar.js  jiraClient.js  linearClient.js  microsoftCalendar.js  nvidiaClient.js  scheduler.js  server.js  telegramClient.js
backend/src/routes/: ai.js  google.js  integrations.js  microsoft.js  reminders.js  telegram.js  users.js
